--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   },
   "dependencies": {
     "mongodb": "^4.8.1",
-    "mongoose": "^7.6.3",
+    "mongoose": "^7.6.4",
+    "multer": "^1.4.5-lts.1",
+    "net": "^1.0.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tls": "^0.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.10",
     "@types/node": "18.7.5",
     "@types/react": "16.9.17",
     "typescript": "4.6.3"
